update(filter-service): mongodb changed to elasticsearch